# Tech2

./: README.md
ASM_minilibc_2019/: Makefile
CCP_plazza_2019/: .gitignore  Cook.cpp  Cook.hpp  ISafeQueue.hpp  Kitchen.cpp  Kitchen.hpp  Makefile  Pipe.cpp  Pipe.hpp  Pizza.cpp  Pizza.hpp  Recep.cpp  Recep.hpp  SafeQueue.cpp  SafeQueue.hpp  main.cpp
CCP_plazza_2019/bonus/: Graphic.cpp  Graphic.hpp  Main.cpp  Makefile  Recep2.cpp  Recep2.hpp
CNA_groundhog_2019/: .gitignore  Data.cpp
CNA_trade_2019/: Makefile  bot.cpp  bot.hpp  main.cpp  trade
NWP_myftp_2019/: .gitignore  Makefile  init.c  main.c  myftp.h  return.c  server.c
NWP_myteams_2019/: .gitignore
NWP_myteams_2019/client/: Makefile  client.c  main.c  message.c
NWP_myteams_2019/data/: Data.xml
OOP_arcade_2019/: README.md
OOP_indie_studio_2019/: .gitignore  CMakeLists.txt  README.md  clean_cache.sh
OOP_indie_studio_2019/Assets/Map/: 0.map  1.map  save.map
OOP_indie_studio_2019/Assets/Mesh/: Bomb.mtl  Box2.mtl  Pillar.mtl  Ramp.mtl  Wall.mtl  powerUp.b3d  powerUp.mtl  test.mtl
OOP_indie_studio_2019/include/Component/: Component.hpp  Cube.hpp  Mesh.hpp  Stat.hpp  Timer.hpp
OOP_indie_studio_2019/include/Entity/: Entity.hpp
OOP_indie_studio_2019/include/Interface/: IComponent.hpp  IEntity.hpp  ISystem.hpp
OOP_indie_studio_2019/include/Storage/: Storage.hpp
OOP_indie_studio_2019/include/System/: Event.hpp  Game.hpp  Menu.hpp  Sound.hpp  System.hpp
OOP_indie_studio_2019/src/: Component.cpp  Cube.cpp  Entity.cpp  Event.cpp  Game.cpp  Menu.cpp  Mesh.cpp  Sound.cpp  Stat.cpp  Storage.cpp  System.cpp  Timer.cpp  main.cpp
OOP_nanotekspice_2019/: .gitignore  Circuit.cpp  Circuit.hpp  Data.cpp  Data.hpp  Factory.cpp  Factory.hpp  IComponent.hpp  Makefile  Pin.cpp  Pin.hpp  main.cpp  nano
script_formatter_2019/: script_formatter.sh  test.sh  test.sh~
(+48 files in other folders)
